--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron'
+        rel='stylesheet' type='text/css'>
 </head>
 
 <body ondragstart="return false;" ondrop="return false;">
     <div class="calculator">
         <div class="result-window">
-            <div class="history">10 x 5</div>
-            <div class="result">50</div>
+            <div class="history">10 x 500</div>
+            <div class="result">5000</div>
         </div>
         <div class="first row">
             <div class="7 button">7</div>
