added clear button

--- a/index.html
+++ b/index.html
@@ -20,24 +20,27 @@
             <div class="result">5000</div>
         </div>
         <div class="first row">
+            <div class="c button">clear</div>
+        </div>
+        <div class="second row">
             <div class="7 button">7</div>
             <div class="8 button">8</div>
             <div class="9 button">9</div>
             <div class="/ button">/</div>
         </div>
-        <div class="second row">
+        <div class="third row">
             <div class="4 button">4</div>
             <div class="5 button">5</div>
             <div class="6 button">6</div>
             <div class="* button">*</div>
         </div>
-        <div class="third row">
+        <div class="fourth row">
             <div class="1 button">1</div>
             <div class="2 button">2</div>
             <div class="3 button">3</div>
             <div class="- button">-</div>
         </div>
-        <div class="fourth row">
+        <div class="fifth row">
             <div class=". button">.</div>
             <div class="0 button">0</div>
             <div class="= button">=</div>
