--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
 <body ondragstart="return false;" ondrop="return false;">
     <div class="calculator">
         <div class="result-window">
-            <div class="history">10 x 500</div>
-            <div class="result">5000</div>
+            <div class="history"></div>
+            <div class="result"></div>
         </div>
         <div class="first row">
-            <div class="c button">clear</div>
+            <div class="clear button">clear</div>
         </div>
         <div class="second row">
-            <div class="7 button">7</div>
-            <div class="8 button">8</div>
-            <div class="9 button">9</div>
-            <div class="/ button">/</div>
+            <div class="7 button number">7</div>
+            <div class="8 button number">8</div>
+            <div class="9 button number">9</div>
+            <div class="/ button operator">÷</div>
         </div>
         <div class="third row">
-            <div class="4 button">4</div>
-            <div class="5 button">5</div>
-            <div class="6 button">6</div>
-            <div class="* button">*</div>
+            <div class="4 button number">4</div>
+            <div class="5 button number">5</div>
+            <div class="6 button number">6</div>
+            <div class="* button operator">×</div>
         </div>
         <div class="fourth row">
-            <div class="1 button">1</div>
-            <div class="2 button">2</div>
-            <div class="3 button">3</div>
-            <div class="- button">-</div>
+            <div class="1 button number">1</div>
+            <div class="2 button number">2</div>
+            <div class="3 button number">3</div>
+            <div class="- button operator">-</div>
         </div>
         <div class="fifth row">
-            <div class=". button">.</div>
-            <div class="0 button">0</div>
-            <div class="= button">=</div>
-            <div class="+ button">+</div>
+            <div class="decimal button">.</div>
+            <div class="0 button number">0</div>
+            <div class="equals button">=</div>
+            <div class="+ button operator">+</div>
         </div>
     </div>
     <div class="footer">
